# kore

./: CMakeLists.txt
Engine/: CMakeLists.txt
Engine/include/Rendering/: Renderer.h
Engine/src/Rendering/: Renderer.cpp
Sandbox/: CMakeLists.txt
Sandbox/src/: application.cpp
